# opencv-cmake-template

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp  main_hello.cpp
src/common/: CMakeLists.txt  common.cpp
src/common/include/common/: common.h
src/example/: CMakeLists.txt  example.cpp
src/example/include/example/: example.h
src/unit_test/: CMakeLists.txt  eigen_test.cpp  opencv_test.cpp  unit_test.cpp
